--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ nest-asyncio>=1.5.0
 pyyaml>=6.0
 pytest>=7.4.0
 matplotlib>=3.7.0
+spacy>=3.7.0
+transformers>=4.35.0
+dateparser>=1.2.0
+pycountry>=23.12.11
+nltk>=3.8.1
