--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ transformers>=4.35.0
 dateparser>=1.2.0
 pycountry>=23.12.11
 nltk>=3.8.1
+plotly>=5.18.0
+networkx>=3.1
+scikit-learn>=1.3.0
+ipywidgets>=8.1.0
+kaleido>=0.2.1
